--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Mobile Warning Message -->
+    <div id="mobile-warning">
+        This tool is designed for laptop and large screens only.
+    </div>
     <!-- Replace canvas container with CSS-based animation background -->
     <div class="background-animation"></div>
     <div class="container">
